# cafe-order-system

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: main.yml
_dishes_examples/: apps.py  signals.py  urls.py
_dishes_examples/migrations/: 0001_initial.py  0002_dish_slug.py  0003_alter_dish_options_alter_dish_slug_and_more.py
_dishes_examples/templates/: create.html  detail.html  update.html
_dishes_examples/tests/: test_create_dish.py  test_delete_dish.py  test_get_dish.py  test_get_dishes.py  test_update_dish.py
_dishes_examples/views/: get_dishes.py  update_dish.py
nginx/: default.conf
src/apps/base/: exceptions.py  signals.py  urls.py  views.py
src/apps/base/static/css/: 404.css  base.css  header.css
src/apps/base/templates/: 404.html  base.html  header.html  home.html
src/apps/base/templates/base/: base.html  header.html  home.html
src/apps/dishes/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/apps/dishes/migrations/: 0002_dish_slug.py  0003_alter_dish_options_alter_dish_slug_and_more.py
src/apps/dishes/static/css/: list.css
src/apps/dishes/templates/: create.html  detail.html  dishes.html  list.html
src/apps/dishes/tests/: test_create_dish.py  test_delete_dish.py  test_get_dish.py  test_get_dishes.py  test_update_dish.py
src/apps/dishes/views/: __init__.py  create_dish.py  delete_dish.py  get_dish.py  get_dishes.py  update_dish.py
src/apps/orders/: admin.py  api_urls.py  api_views.py  exceptions.py  forms.py  mixins.py  models.py  serializers.py  signals.py  urls.py
src/apps/orders/api_views/: get_order.py
src/apps/orders/migrations/: 0001_initial.py  0002_orderitem_quantity_alter_order_table_number_and_more.py  0003_order_total_price_currency_orderitem_price_currency_and_more.py  0003_remove_order_updated_at_alter_order_created_at_and_more.py  0004_alter_order_options_alter_order_table_number_and_more.py  0005_alter_order_table_number_alter_orderitem_dish_and_more.py  0006_alter_order_table_number.py  0007_remove_order_orders_orde_table_n_63e048_idx_and_more.py  0008_alter_order_options_alter_order_status.py  0009_alter_order_options_order_paid_at.py  0010_order_orders_orde_status_079368_idx_and_more.py  0011_order_search_vector_order_status_text_and_more.py  0012_alter_orderitem_options.py
src/apps/orders/services/: __init__.py  create_order.py  delete_order.py  get_shift_revenue.py  search_orders.py  update_order_status.py
src/apps/orders/static/css/: _back_to_orders.css  _order_card.css  create.css  detail.css  (+3 more)
src/apps/orders/tests/: test_formset.py
src/apps/orders/views/: __init__.py  create_order.py  delete_order.py  get_order.py  get_order_revenue.py  get_orders.py  get_shift_revenue.py  search_orders.py  update_order.py  update_order_status.py
src/config/: settings.py  urls.py
src/config/settings/: __init__.py  base.py  development.py  production.py
src/static/orders/css/: detail.css  list.css
src/static/orders/js/: detail.js
tests/dishes/: test_create_dish.py  test_get_dish.py  test_get_dishes.py
(+69 files in other folders)
